# cookiecutter-pdm-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/main/: main.py
{{ cookiecutter.project_slug }}/src/new_package/: main.py
{{ cookiecutter.project_slug }}/src/pdm_demo/: main.py
